[package]
name = "wgpu_sort"
version = "0.1.0"
edition = "2021"
authors = ["Simon Niedermayr", "Josef Stumpfegger"]


[dependencies]
wgpu = { version = "0.19.1" }
bytemuck = { version = "1.13.0", features = ["derive"] }
futures-intrusive = "0.5.0"

log = "0.4"
env_logger = "0.11"


[dev-dependencies]
rand = "0.8.5"
pollster = { version = "0.3.0", features = ["macro"] }
float-ord = "0.3.2"
criterion = { version = "0.4", features = ["html_reports"] }


[[bench]]
name = "sort"
harness = false
