[package]
name = "wgpu_sort"
version = "0.1.0"
edition = "2021"
authors = ["Simon Niedermayr", "Josef Stumpfegger"]
license = "BSD-2"
description = " WebGPU/wgpu Radix Key-Value Sort "
repository = "https://github.com/KeKsBoTer/wgpu_sort"
homepage = "https://github.com/KeKsBoTer/wgpu_sort"
documentation = "https://docs.rs/wgpu_sort"
keywords = ["wgpu", "gpu", "sort","radxi","wgpu"]
categories = ["rendering","algorithms"]
readme = "README.md"


[package.metadata.docs.rs]
all-features = true

[dependencies]
wgpu = { version = "0.19.1" }
bytemuck = { version = "1.13.0", features = ["derive"] }
futures-intrusive = "0.5.0"

log = "0.4"
env_logger = "0.11"


[dev-dependencies]
rand = "0.8.5"
pollster = { version = "0.3.0", features = ["macro"] }
float-ord = "0.3.2"
criterion = { version = "0.4", features = ["html_reports"] }


[[bench]]
name = "sort"
harness = false


[[example]]
name = "sort"

[[example]]
name = "sort_indirect"

[[test]]
name = "sort"
